--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -31,7 +31,97 @@ footer, header, hgroup, menu, nav, section {
 
 body {
 	line-height: 1;
+	scroll-behavior: smooth; /* Enable smooth scrolling behavior */
 }
+	
+
+header {
+	margin-bottom: 1em;
+}
+
+	header p {
+		display: block;
+		margin: 1em 0 0 0;
+		padding: 0 0 0.5em 0;
+	}
+
+#header {
+	position: fixed;
+	z-index: 10000;
+	left: 0;
+	top: 0;
+	width: 100%;
+	background: rgba(255, 255, 255, 0.95);
+	height: 3em;
+	line-height: 3em;
+	box-shadow: 0 0 0.15em 0 rgba(0, 0, 0, 0.1);
+}
+
+	#header h1 {
+		position: absolute;
+		left: 1em;
+		top: 0;
+		height: 3em;
+		line-height: 3em;
+		cursor: default;
+	}
+
+		#header h1 a {
+			font-size: 1.25em;
+		}
+
+	#header nav {
+		position: absolute;
+		right: 0.5em;
+		top: 0;
+		height: 3em;
+		line-height: 3em;
+	}
+
+		#header nav ul {
+			margin: 0;
+		}
+
+			#header nav ul li {
+				display: inline-block;
+				margin-left: 0.5em;
+				font-size: 0.9em;
+			}
+
+				#header nav ul li a {
+					display: block;
+					color: inherit;
+					text-decoration: none;
+					height: 3em;
+					line-height: 3em;
+					padding: 0 0.5em 0 0.5em;
+					outline: 0;
+				}
+				@media screen and (max-width: 736px) {
+
+					#header {
+						height: 2.5em;
+						line-height: 2.5em;
+					}
+		
+						#header h1 {
+							text-align: center;
+							position: relative;
+							left: 0;
+							top: 0;
+							height: 2.5em;
+							line-height: 2.5em;
+						}
+		
+							#header h1 a {
+								font-size: 1em;
+							}
+		
+						#header nav {
+							display: none;
+						}
+		
+				}
 
 ol, ul {
 	list-style: none;
