--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -33,6 +33,10 @@ body {
 	line-height: 1;
 	scroll-behavior: smooth; /* Enable smooth scrolling behavior */
 }
+
+  ul {
+    text-align: left;
+  }
 	
 
 header {
